==> nosnav/stm32f7/00-Libraries/stm32f7_usart.c <==
#include "stm32f7_usart.h"
#define GPIO_AF_USART1     GPIO_AF7_USART1
#define IRQ_USART1         USART1_IRQn
#define GPIO_AF_USART2     GPIO_AF7_USART2
#define IRQ_USART2         USART2_IRQn
#define GPIO_AF_USART3     GPIO_AF7_USART3
#define IRQ_USART3         USART3_IRQn
#define GPIO_AF_UART4      GPIO_AF8_UART4
#define IRQ_UART4          UART4_IRQn
#define IRQ_UART5          UART5_IRQn
#define GPIO_AF_USART6     GPIO_AF8_USART6
#define IRQ_USART6         USART6_IRQn
#define GPIO_AF_UART7      GPIO_AF8_UART7
#define IRQ_UART7          UART7_IRQn
#define GPIO_AF_UART8      GPIO_AF8_UART8
#define IRQ_UART8          UART8_IRQn

uint8_t USART_Getc(USART_TypeDef* USARTx) {
	uint8_t c;
	
	/* Read character from buffer */
	if (BUFFER_Read(USART_INT_GetUSARTBuffer(USARTx), &c, 1)) {
		return c;
	}
	
	/* Read was not successfull */
	return 0;
}

int16_t USART_FindCharacter(USART_TypeDef* USARTx, uint8_t c) {
	return BUFFER_FindElement(USART_INT_GetUSARTBuffer(USARTx), c);
}

uint8_t USART_BufferEmpty(USART_TypeDef* USARTx) {
	return BUFFER_GetFull(USART_INT_GetUSARTBuffer(USARTx)) == 0;
}

uint8_t USART_BufferFull(USART_TypeDef* USARTx) {
	return BUFFER_GetFree(USART_INT_GetUSARTBuffer(USARTx)) == 0;
}

void USART_ClearBuffer(USART_TypeDef* USARTx) {
	BUFFER_Reset(USART_INT_GetUSARTBuffer(USARTx));
}

void USART1_InitPins(USART_PinsPack_t pinspack) {	
	/* Init pins */
#if defined(GPIOA)
	if (pinspack == USART_PinsPack_1) {
		GPIO_InitAlternate(GPIOA, GPIO_PIN_9 | GPIO_PIN_10, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART1);
	}
#endif
#if defined(GPIOB)
	if (pinspack == USART_PinsPack_2) {
		GPIO_InitAlternate(GPIOB, GPIO_PIN_6 | GPIO_PIN_7, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART1);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		USART_InitCustomPinsCallback(USART1, GPIO_AF_USART1);
	}
}

void USART2_InitPins(USART_PinsPack_t pinspack) {
	/* Init pins */
#if defined(GPIOA)
	if (pinspack == USART_PinsPack_1) {
		GPIO_InitAlternate(GPIOA, GPIO_PIN_2 | GPIO_PIN_3, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART2);
	}
#endif
#if defined(GPIOD)
	if (pinspack == USART_PinsPack_2) {
		GPIO_InitAlternate(GPIOD, GPIO_PIN_5 | GPIO_PIN_6, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART2);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		USART_InitCustomPinsCallback(USART2, GPIO_AF_USART2);
	}
}

void USART3_InitPins(USART_PinsPack_t pinspack) {
	/* Init pins */
#if defined(GPIOB)
	if (pinspack == USART_PinsPack_1) {
		GPIO_InitAlternate(GPIOB, GPIO_PIN_10 | GPIO_PIN_11, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART3);
	}
#endif
#if defined(GPIOC)
	if (pinspack == USART_PinsPack_2) {
		GPIO_InitAlternate(GPIOC, GPIO_PIN_10 | GPIO_PIN_11, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART3);
	}
#endif
#if defined(GPIOD)
	if (pinspack == USART_PinsPack_3) {
		GPIO_InitAlternate(GPIOD, GPIO_PIN_8 | GPIO_PIN_9, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART3);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		USART_InitCustomPinsCallback(USART3, GPIO_AF_USART3);
	}
}

void UART4_InitPins(USART_PinsPack_t pinspack) {
	/* Init pins */
#if defined(GPIOA)
	if (pinspack == USART_PinsPack_1) {
		GPIO_InitAlternate(GPIOA, GPIO_PIN_0 | GPIO_PIN_1, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART4);
	}
#endif
#if defined(GPIOC)
	if (pinspack == USART_PinsPack_2) {
		GPIO_InitAlternate(GPIOC, GPIO_PIN_10 | GPIO_PIN_11, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART4);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		USART_InitCustomPinsCallback(UART4, GPIO_AF_UART4);
	}
}

void UART5_InitPins(USART_PinsPack_t pinspack) {
	/* Init pins */
#if defined(GPIOC) && defined(GPIOD)
	if (pinspack == USART_PinsPack_1) {
		GPIO_InitAlternate(GPIOC, GPIO_PIN_12, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART5);
		GPIO_InitAlternate(GPIOD, GPIO_PIN_2, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART5);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		USART_InitCustomPinsCallback(UART5, GPIO_AF_UART5);
	}
}

void UART7_InitPins(USART_PinsPack_t pinspack) {
	/* Init pins */
#if defined(GPIOE)
	if (pinspack == USART_PinsPack_1) {
		GPIO_InitAlternate(GPIOE, GPIO_PIN_8 | GPIO_PIN_7, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART7);
	}
#endif
#if defined(GPIOF)
	if (pinspack == USART_PinsPack_2) {
		GPIO_InitAlternate(GPIOF, GPIO_PIN_7 | GPIO_PIN_6, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART7);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		USART_InitCustomPinsCallback(UART7, GPIO_AF_UART7);
	}
}

void UART8_InitPins(USART_PinsPack_t pinspack) {
	/* Init pins */
#if defined(GPIOE)
	if (pinspack == USART_PinsPack_1) {
		GPIO_InitAlternate(GPIOE, GPIO_PIN_1 | GPIO_PIN_0, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART8);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		USART_InitCustomPinsCallback(UART8, GPIO_AF_UART8);
	}
}

void USART1_IRQHandler(void) {
	/* Check if interrupt was because data is received */
	if (USART1->USART_STATUS_REG & USART_ISR_RXNE) {
#ifdef USART1_USE_CUSTOM_IRQ
		/* Call user function */
		USART1_ReceiveHandler(USART_READ_DATA(USART1));
#else
		/* Put received data into internal buffer */
		USART_INT_InsertToBuffer(&USART1_BF, USART_READ_DATA(USART1));
#endif
	}
	
	/* Clear all USART flags */
	USART_INT_ClearAllFlags(USART1, IRQ_USART1);
}

void USART2_IRQHandler(void) {
	/* Check if interrupt was because data is received */
	if (USART2->USART_STATUS_REG & USART_ISR_RXNE) {
#ifdef USART2_USE_CUSTOM_IRQ
		/* Call user function */
		USART2_ReceiveHandler(USART_READ_DATA(USART2));
#else 
		/* Put received data into internal buffer */
		USART_INT_InsertToBuffer(&USART2_BF, USART_READ_DATA(USART2));
#endif
	}
	
	/* Clear all USART flags */
	USART_INT_ClearAllFlags(USART2, IRQ_USART2);
}

void USART3_IRQHandler(void) {
	/* Check if interrupt was because data is received */
	if (USART3->USART_STATUS_REG & USART_ISR_RXNE) {
#ifdef USART3_USE_CUSTOM_IRQ
		/* Call user function */
		USART3_ReceiveHandler(USART_READ_DATA(USART3));
#else
		/* Put received data into internal buffer */
		USART_INT_InsertToBuffer(&USART3_BF, USART_READ_DATA(USART3));
#endif
	}
	
	/* Clear all USART flags */
	USART_INT_ClearAllFlags(USART3, IRQ_USART3);
}

void UART4_IRQHandler(void) {
	/* Check if interrupt was because data is received */
	if (UART4->USART_STATUS_REG & USART_ISR_RXNE) {
#ifdef UART4_USE_CUSTOM_IRQ
		/* Call user function */
		UART4_ReceiveHandler(USART_READ_DATA(UART4));
#else
		/* Put received data into internal buffer */
		USART_INT_InsertToBuffer(&UART4_BF, USART_READ_DATA(UART4));
#endif
	}
	
	/* Clear all USART flags */
	USART_INT_ClearAllFlags(UART4, IRQ_UART4);
}

void UART5_IRQHandler(void) {
	/* Check if interrupt was because data is received */
	if (UART5->USART_STATUS_REG & USART_ISR_RXNE) {
#ifdef UART5_USE_CUSTOM_IRQ
		/* Call user function */
		UART5_ReceiveHandler(USART_READ_DATA(UART5));
#else
		/* Put received data into internal buffer */
		USART_INT_InsertToBuffer(&UART5_BF, USART_READ_DATA(UART5));
#endif
	}
	
	/* Clear all USART flags */
	USART_INT_ClearAllFlags(UART5, IRQ_UART5);
}

void UART7_IRQHandler(void) {
	/* Check if interrupt was because data is received */
	if (UART7->USART_STATUS_REG & USART_ISR_RXNE) {
#ifdef UART7_USE_CUSTOM_IRQ
		/* Call user function */
		UART7_ReceiveHandler(USART_READ_DATA(UART7));
#else
		/* Put received data into internal buffer */
		USART_INT_InsertToBuffer(&UART7_BF, USART_READ_DATA(UART7));
#endif
	}
	
	/* Clear all USART flags */
	USART_INT_ClearAllFlags(UART7, IRQ_UART7);
}

void UART8_IRQHandler(void) {
	/* Check if interrupt was because data is received */
	if (UART8->USART_STATUS_REG & USART_ISR_RXNE) {
#ifdef UART8_USE_CUSTOM_IRQ
		/* Call user function */
		UART8_ReceiveHandler(USART_READ_DATA(UART8));
#else
		/* Put received data into internal buffer */
		USART_INT_InsertToBuffer(&UART8_BF, USART_READ_DATA(UART8));
#endif
	}
	
	/* Clear all USART flags */
	USART_INT_ClearAllFlags(UART8, IRQ_UART8);
}
